<resources>
    <string name="app_name">HappyHealthier</string>
    <string name="facebook_application_id" translatable="false">2397311947225367</string>
    <string name="facebook_login_protocol_key" translatable="false">fb2397311947225367</string>
    <string name="sign_out" translatable="false">Sign Out</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="medi_es">Medições</string>
    <string name="sa_de">Saúde</string>
    <string name="exerc_cio">Exercício</string>
    <string name="perfil">Perfil</string>
    <string name="defini_es">Definições</string>
    <string name="sobre">Sobre</string>
    <string name="placeholder_text">Por definir</string>
    <string name="mais">Mais</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="definir_foto_de_perfil">Definir foto de perfil</string>
    <string name="c_mara">Câmara</string>
    <string name="galeria">Galeria</string>
    <string name="por_definir">Por definir</string>
    <string name="mudar_linguagem">Mudar linguagem</string>
    <string name="altura">Altura</string>
    <string name="validar">Validar</string>
    <string name="altura_m">Altura (m)</string>
    <string name="batimento_card_aco">Batimento Cardíaco</string>
    <string name="batimento_card_aco_batimentos_min">Batimento Cardíaco (batimentos/min)</string>
    <string name="Calorias">Calorias</string>
    <string name="Calorias_Kcal">Calorias (kcal)</string>
    <string name="Distância">Distância</string>
    <string name="Distância_Km">Distância (km)</string>
    <string name="Glicemia">Glicemia</string>
    <string name="Nível">Nível de Açucar (mg/dL)</string>
    <string name="IMC">IMC</string>
    <string name="passos">Passos</string>
    <string name="peso">Peso</string>
    <string name="peso_kg">Peso (Kg)</string>
    <string name="press_o_arterial_m_nima_mm_hg">Pressão Arterial Mínima (mm Hg)</string>
    <string name="press_o_arterial_m_xima_mm_hg">Pressão Arterial Máxima (mm Hg)</string>
    <string name="press_o_arterial">Pressão Arterial</string>
    <string name="sono">Sono</string>
    <string name="hora_min">hora.min</string>
    <string name="aplica_o_desenvolvida_por_pedro_vilares_e_in_s_lopes_para_a_uc_de_computa_o_m_vel_n_nvers_o_1_0">Aplicação desenvolvida por Pedro Vilares e Inês Lopes para a UC de Computação Móvel.\n\nVersão 1.0</string>
    <string name="tempo">Tempo</string>
    <string name="resumo_da_atividade">Resumo da Atividade</string>
    <string name="calorias">Calorias:</string>
    <string name="passos_dois_pontos">Passos:</string>
    <string name="dist_ncia">Distância:</string>
    <string name="tempo_dois_pontos">Tempo:</string>
    <string name="nome_dois_pontos">Nome:</string>
    <string name="idade_dois_pontos">Idade:</string>
    <string name="peso_dois_pts">Peso:</string>
    <string name="altura_dois_pts">Altura:</string>
    <string name="editar_dados_pessoais">Editar Dados Pessoais</string>
    <string name="idade">Idade:</string>
    <string name="concluir">Concluir</string>
    <string name="idioma">Idioma       </string>
    <string name="partilhar_dados">Partilhar Dados</string>

    <string-array name="exercises">
        <item>Caminhada</item>
        <item>Corrida</item>
        <item>Ciclismo</item>
    </string-array>

    <string-array name="medicoes">
        <item>Sono</item>
        <item>Peso</item>
        <item>IMC</item>
        <item>Passos</item>
        <item>Distância</item>
        <item>Calorias</item>
        <item>Batimento Cardíaco</item>
        <item>Pressão Arterial</item>
        <item>Glicemia</item>
        <item>Altura</item>
    </string-array>

</resources>
