<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/pressaoMinima"
        android:layout_width="302dp"
        android:layout_height="45dp"
        android:layout_marginBottom="416dp"
        android:ems="10"
        android:hint="@string/press_o_arterial_m_nima_mm_hg"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="392dp"
        android:layout_height="327dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="85dp"
        android:layout_height="44dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/validar"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressaoMinima"
        app:layout_constraintVertical_bias="0.526"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/pressaoMaxima"
        android:layout_width="308dp"
        android:layout_height="47dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="476dp"
        android:ems="10"
        android:hint="@string/press_o_arterial_m_xima_mm_hg"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="84dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@+id/pressaoMaxima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pressao" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="183dp"
        android:layout_height="33dp"
        android:layout_marginBottom="24dp"
        android:text="@string/press_o_arterial"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pressaoMaxima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image" />


</androidx.constraintlayout.widget.ConstraintLayout>