<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="375dp"
        android:layout_height="388dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInsert"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="104dp"
        android:layout_height="41dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="139dp"
        android:text="@string/Distância"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="147dp"
        android:text="@string/validar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressaoMaxima"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/pressaoMaxima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="81dp"
        android:ems="10"
        android:hint="@string/Distância_Km"
        android:inputType="time"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="107dp"
        android:layout_height="86dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/km" />

</androidx.constraintlayout.widget.ConstraintLayout>